feat: added requirments

--- a/lab_2_page_2.html
+++ b/lab_2_page_2.html
@@ -9,5 +9,6 @@
 </head>
 <body id="page2">
    <h1 id="page2_head">Lab 2 - Page 2</h1>
+   <img src="https://www.routeoneapparel.com/cdn/shop/products/large-Maryland_Testudo_3x5_Flag_grande.png?v=1738967433" id="Testudo">
 </body>
 </html>
