--- a/lab_2.html
+++ b/lab_2.html
@@ -14,13 +14,13 @@
    <form action="lab_2_page_2.html">
        <div class="form_things">
            <label for="usr_name">Name: </label>
-           <input type="text" id = "usr_name" required>
+           <input type="text" id = "usr_name" name="usr_name" required>
 
 
            <br><br>
       
            <label for="usr_email">Email: </label>
-           <input type="text" id = "usr_email" required>
+           <input type="email" id = "usr_email" name="usr_email" required>
        </div>
        <br>
        <input type="submit" id="sub_button">
